# MultiDownload

./: CMakeLists.txt  build.sh  main.cpp
doc/: 需求说明.md
src/: CommonDef.h  DownloadFactory.h  DownloadTask.cpp  DownloadTask.h  SmallTask.h  ThreadPool.h  Utils.h
src/file/: LocalFile.cpp  LocalFile.h  MmapFile.cpp  MmapFile.h
src/ftp/: FtpTask.h
src/http/: HttpSmallTask.cpp  HttpSmallTask.h  HttpTask.cpp  HttpTask.h
